--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_riverpod: ^0.12.4
+  http: ^0.12.2
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
